--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,6 @@ import(utils)
 import(truncdist)
 importFrom(Rcpp,sourceCpp)
 importFrom(methods,is)
-importFrom(graphics, abline, par, plot)
+importFrom(graphics, abline, par, plot, lines)
 S3method(plot, GenModel)
 S3method(print, GenModel)
