--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Date: 2023-09-03
 Authors@R: c(person("Alencar", "Xavier", role=c("aut", "cre"), email = "alenxav@gmail.com"),person("Shizhong", "Xu", role=c("aut", "ctb")))
 Author: Alencar Xavier [aut, cre], Shizhong Xu [aut, ctb]
 Maintainer: Alencar Xavier <alenxav@gmail.com>
-Description: Genome-wide association analysis that accomodate membership information, variance adjustment, and correlated responses.
+Description: Genome-wide association analysis that accommodate membership information, variance adjustment, and correlated responses.
 License: GPL-3
 Imports: Rcpp, truncdist
 LinkingTo: Rcpp, RcppEigen
